# Gamo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: c_snippets.code-snippets
.github/instructions/: app.instructions.md  engine.instructions.md  general.instructions.md  style.instructions.md  vendor.instructions.md
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt
app/shaders/: basic.frag
app/src/: main.c
app/src/ui/: nuklear_context.c  nuklear_context.h
cmake/toolchains/: mingw64.cmake
engine/: CMakeLists.txt
engine/include/: message.h
engine/include/engine/: engine.h  general.h
engine/include/engine/application/: application.h  layer.h
engine/include/engine/core/: debug_call.h  dynamic_array.h  time.h
engine/include/engine/ecs/: scene.h
engine/include/engine/ecs/components/: camera.h  mesh.h  texture.h  transform.h
engine/include/engine/events/: event_contructors.h  events.h
engine/include/engine/general/: assert.h  engine_alloc.h  logger.h  read_file.h
engine/include/engine/platform/: monitor.h  window.h
engine/include/engine/renderer/: element_array_buffer.h  framebuffer.h  mesh.h  renderer.h  texture.h  vertex_array.h  vertex_buffer.h
engine/include/engine/renderer copy/: renderer.h
engine/include/engine/ui/: ui.h  ui_backend.h
engine/src/: engine.c  message.c  pch.h
engine/src/application/: application.c
engine/src/core/: dynamic_array.c  time.c
engine/src/ecs/: ecs_world.c  ecs_world.h  scene.c
engine/src/ecs/components/: camera.c
engine/src/ecs/systems/: ecs_render_system.c  ecs_render_system.h
engine/src/events/: event_contructors.c  events.c
engine/src/general/: engine_alloc.c  logger.c  read_file.c
engine/src/platform/: window_glfw.c
engine/src/renderer/: mesh_opengl.c  mesh_opengl.h  renderer_opengl.c  texture.c
engine/src/renderer/gl/: element_array_buffer.c  element_array_buffer.h  framebuffer.c  gl_check.h  shader.c  shader.h  shader_registry.c  shader_registry.h  shader_uniforms.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
engine/src/ui/: ui.c  ui_backend.c
engine/src/ui/backends/: nuklear_backend.c
engine/tests/dynamic_array/: dynamic_array_test.c
shaders/: basic.frag  basic.vert
